Fix the phases tabs on the top of the page to not overflow the space.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -216,7 +216,7 @@ body {
 .tab_header td
 {
 background-color: lightgrey;
-width: 98px;
+width: 108px;
 margin: 10px 10px 0 0;
 text-align: center;
 background: lightgrey no-repeat top left;
